adding ktlint at build stage